// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationChecklist render 0/1 complete 1`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0 border-0"
        type="button"
      >
        <div>
          <CheckboxBlankCircleIcon
            className="icon-inline text-muted"
          />
          <span
            className="mr-2 ml-2"
          >
            title1
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 0/1 complete 2`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0 border-0"
        type="button"
      >
        <div>
          <CheckboxBlankCircleIcon
            className="icon-inline text-muted"
          />
          <span
            className="mr-2 ml-2"
          >
            title1
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 1/1 complete 1`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0 border-0"
        type="button"
      >
        <div>
          <CheckIcon
            className="icon-inline text-success"
          />
          <span
            className="mr-2 ml-2"
          >
            title1
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render loading 1`] = `
<div
  className="loading-spinner icon-inline my-2"
/>
`;
